restore google analytics tag

--- a/index.html
+++ b/index.html
@@ -4,6 +4,20 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>My test page</title>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-FHDZFTN6VL"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-FHDZFTN6VL");
+    </script>
     <!-- Fundraise Up: the new standard for online giving -->
     <script>
       (function (w, d, s, n, a) {
