change href and id

--- a/index.html
+++ b/index.html
@@ -43,23 +43,11 @@
           for (i = 0; i < 7; i++) o[l[i]] = o(l[i]);
           w[n] = o;
         }
-      })(window, document, "script", "FundraiseUp", "AJZSDMZE");
+      })(window, document, "script", "FundraiseUp", "AEMZUDUM");
     </script>
     <!-- End Fundraise Up -->
   </head>
   <body>
-    <div class="container">
-      <ul class="list">
-        <li class="list-item">
-          <span class="list-title">Donate Button</span>
-          <span class="list-description"
-            >Below, you can see the Donate Button Elements component. Notice its
-            subtle animation. When selected, the button will launch
-            Checkout.</span
-          >
-          <a href="#XTGWFZFR" style="display: none"></a>
-        </li>
-      </ul>
-    </div>
+    <a href="#XJKDHSTQ" style="display: none"></a>
   </body>
 </html>
