--- a/index.html
+++ b/index.html
@@ -49,5 +49,35 @@
   </head>
   <body>
     <a href="#XJKDHSTQ" style="display: none"></a>
+    <script>
+      FundraiseUp.openCheckout("AEMZUDUM", {
+        donation: {
+          amount: 10,
+          currency: "EUR",
+          recurring: "monthly",
+        },
+        supporter: {
+          firstName: "Emily",
+          lastName: "Smith",
+          email: "emily.smith@example.org",
+        },
+        tribute: {
+          honoree: "Mom and Dad",
+        },
+        designations: [{ id: "EHHJ9R36" }],
+        customFields: {
+          test: "value",
+          code: "some-code",
+          referralSource: "Social Media",
+          campaignName: "Spring Fundraiser",
+          notes: "This is a recurring donation.",
+          preferredContactMethod: "email",
+        },
+        config: {
+          modifyAmount: true,
+          modifyDesignation: true,
+        },
+      });
+    </script>
   </body>
 </html>
