--- a/index.html
+++ b/index.html
@@ -50,33 +50,24 @@
   <body>
     <a href="#XJKDHSTQ" style="display: none"></a>
     <script>
-      FundraiseUp.openCheckout("AEMZUDUM", {
-        donation: {
-          amount: 10,
-          currency: "EUR",
-          recurring: "monthly",
-        },
-        supporter: {
-          firstName: "Emily",
-          lastName: "Smith",
-          email: "emily.smith@example.org",
-        },
-        tribute: {
-          honoree: "Mom and Dad",
-        },
-        designations: [{ id: "EHHJ9R36" }],
-        customFields: {
-          test: "value",
-          code: "some-code",
-          referralSource: "Social Media",
-          campaignName: "Spring Fundraiser",
-          notes: "This is a recurring donation.",
-          preferredContactMethod: "email",
-        },
-        config: {
-          modifyAmount: true,
-          modifyDesignation: true,
-        },
+      FundraiseUp.on("checkout", function () {
+        window.dataLayer = window.dataLayer || [];
+        window.dataLayer.push({
+          event: "checkout_opened",
+          ecommerce: {
+            event_name: "begin_checkout",
+            value: 50, // Сумма
+            currency: "USD",
+            items: [
+              {
+                item_name: "Donation",
+                item_id: "donation_001",
+                price: 50,
+                quantity: 1,
+              },
+            ],
+          },
+        });
       });
     </script>
   </body>
