change checkout tag code

--- a/index.html
+++ b/index.html
@@ -19,24 +19,23 @@
       // gtag("config", "G-FHDZFTN6VL");
       FundraiseUp.on("checkout", function () {
         window.dataLayer = window.dataLayer || [];
-        window.dataLayer.push({
-          event: "checkout_opened",
-          ecommerce: {
-            event_name: "begin_checkout",
-            value: 50, // Сумма
-            currency: "USD",
-            items: [
-              {
-                item_name: "Donation",
-                item_id: "donation_001",
-                price: 50,
-                quantity: 1,
-              },
-            ],
-          },
-        });
         function gtag() {
-          dataLayer.push(arguments);
+          dataLayer.push({
+            event: "checkout_opened",
+            ecommerce: {
+              event_name: "begin_checkout",
+              value: 50, // Сумма
+              currency: "USD",
+              items: [
+                {
+                  item_name: "Donation",
+                  item_id: "donation_001",
+                  price: 50,
+                  quantity: 1,
+                },
+              ],
+            },
+          });
         }
         gtag("js", new Date());
 
