enable test mode

--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
         });
       });
     </script>
+    <script>
+      window.fundraiseup_livemode = false;
+    </script>
     <!-- Fundraise Up: the new standard for online giving -->
     <script>
       (function (w, d, s, n, a) {
