--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     <!-- Google tag (gtag.js) -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-FHDZFTN6VL"
+      src="https://www.googletagmanager.com/gtag/js?id=GTM-5HQSP3TH
+"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -40,7 +41,7 @@
       }
       gtag("js", new Date());
 
-      gtag("config", "G-FHDZFTN6VL");
+      gtag("config", "GTM-5HQSP3TH");
     </script>
     <script>
       FundraiseUp.on("checkoutOpen", function (details) {
